# queue3d

./: .dockerignore  .gitignore  .sops.yaml  CLAUDE.md  Dockerfile  Makefile  docker-compose.yaml  entrypoint.sh  justfile  pyproject.toml
.agents/skills/architecture-authoring/: SKILL.md
.agents/skills/close-sprint/: SKILL.md
.agents/skills/consolidate-architecture/: SKILL.md
.agents/skills/create-tickets/: SKILL.md
.agents/skills/execute-sprint/: SKILL.md
.agents/skills/gh-import/: SKILL.md
.agents/skills/issue/: SKILL.md
.agents/skills/oop/: SKILL.md
.agents/skills/plan-sprint/: SKILL.md
.agents/skills/project-initiation/: SKILL.md
.agents/skills/project-knowledge/: SKILL.md
.agents/skills/project-status/: SKILL.md
.agents/skills/se/: SKILL.md
.agents/skills/self-reflect/: SKILL.md
.agents/skills/sprint-roadmap/: SKILL.md
.clasi/: clasi-version  config.yaml
.claude/: settings.json
.claude/rules/: clasi-artifacts.md  git-commits.md  mcp-required.md  source-code.md  todo-dir.md
.claude/skills/issue/: SKILL.md
app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  models.py
app/data/: adjectives.txt  nouns.txt
app/routers/: admin_api.py  pages.py  queue_api.py  upload.py
app/templates/: base.html  login.html
app/utils/: passphrase.py  stl_validator.py  storage.py
config/: dotconfig.yaml  sops.yaml
config/dev/: public.env  secrets.env
config/prod/: public.env  secrets.env
secrets/: dev.env  prod.env
tests/: conftest.py  test_jobs.py  test_passphrase_auth.py  test_smoke.py  test_stl_validator.py
(+43 files in other folders)
